src/objects/AccountAcount__c.object
<CustomObject>
    <description>*** Account Header</description>
    <fields>
        <fullName>AccountLanguage__c</fullName>
        <label>会計書言語</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>会計宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountProviso__c</fullName>
        <label>但し書き内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReceiptDate__c</fullName>
        <label>領収証日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountReceiptName__c</fullName>
        <label>請求書宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountedFlgCal__c</fullName>
        <formula>IF(Field39__c = &quot;30&quot; ,
	IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;VOID&quot;, &quot;VOID対象&quot;),
	IF(ISBLANK(Field53__c) , 
		IMAGE(&quot;/img/icon/unresolved16.png&quot;, &quot;未会計&quot;), 
		IMAGE(&quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;会計済み&quot;) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会計済</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmoutSpecialPrice__c</fullName>
        <label>特別税</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BatchProcessStatusDiv__c</fullName>
        <label>バッチ処理区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCal__c</fullName>
        <formula>IF ( ISBLANK(relaccount__r.Account.Name) ,   ContactName__c  ,relaccount__r.Account.Name)</formula>
        <label>ご請求先</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment2__c</fullName>
        <label>コメント(社内)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>会計書の宛名先自動表示、設定用</description>
        <formula>relaccount__r.LastName  &amp; &apos; &apos; &amp;  relaccount__r.FirstName</formula>
        <label>お客様名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouponReturnFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>クーポン利用の返金</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DetailSortBy__c</fullName>
        <label>並べ順項目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>割引金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DivisionName__c</fullName>
        <formula>if ( ISPICKVAL(Relreserve__r.Field367__c, &quot;婚礼&quot;) || ISPICKVAL(Relreserve__r.Field367__c, &quot;フォトプラン&quot;) || ISPICKVAL(Relreserve__r.Field367__c, &quot;結納・顔合わせ&quot;), &quot;A_ブライダル部門&quot;, if ( ISPICKVAL(Relreserve__r.Field367__c, &quot;法人予約_営業担当付&quot;) || ISPICKVAL(Relreserve__r.Field367__c, &quot;法人予約_営業担当無し&quot;), &quot;B_法人部門&quot;, &quot;C_個人部門&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$部門</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExchangeTaxRate__c</fullName>
        <defaultValue>$Setup.CommDefine__c.ExchangeTaxRate__c</defaultValue>
        <inlineHelpText>外貨から日本の通貨へ変換する場合、該当消費税で使って、内消費税を計算する</inlineHelpText>
        <label>日本消費税</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field100__c</fullName>
        <label>レストラン売上合計2（内税込み）金額</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field101__c</fullName>
        <label>レストラン売上合計2（内税込み）点数</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field102__c</fullName>
        <label>レストラン売上外税対象金額</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLockFlg__c</fullName>
        <formula>frs__r.IsLockFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ロックフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNewLayout__c</fullName>
        <defaultValue>true</defaultValue>
        <description>該当項目リリース後、作成した会計情報は新会計メニューに適応する</description>
        <label>新会計フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueDate__c</fullName>
        <description>会計書発行日</description>
        <label>発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtherShopEditCheckFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>別店舗から編集チェックフラグ(システム用)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutSideAccount__c</fullName>
        <formula>if ( Field39__c =&quot;00&quot; &amp;&amp;  Field40__c =&quot;&quot; &amp;&amp;  Field147__c &lt;&gt; 0, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>取引種別が00でVOIDなし売上金額が¥0でないのとき、集計対象の値１を返す</inlineHelpText>
        <label>$集計対象外</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <defaultValue>&apos;0001&apos;</defaultValue>
        <label>POSNo.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>入金確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentHandReqFlg__c</fullName>
        <description>該当項目値は「１」する場合、会計編集画面からお客様は手動に[入金確認]に設定する
システム判定用、画面に非表示する</description>
        <label>入金確認手動設定フラグ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanNo__c</fullName>
        <inlineHelpText>Plan Number がゼロのときは、プランではないとする</inlineHelpText>
        <label>Plan#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceiptDt__c</fullName>
        <label>入金日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReciptNo__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>レシート番号</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Relreserve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>会計</relationshipLabel>
        <relationshipName>Account8Wls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RespectLst__c</fullName>
        <label>敬称</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>G_MrList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoomDisplayNo__c</fullName>
        <label>部屋DisplayNo</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomName__c</fullName>
        <label>部屋名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomSeq__c</fullName>
        <label>部屋Seq#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>売上計上日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesdayCal__c</fullName>
        <formula>frs__r.Salesday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$営業日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SearchDate__c</fullName>
        <label>SearchDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <formula>Field150__r.Seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Seq.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <label>店舗コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopName__c</fullName>
        <label>店舗名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopSeq__c</fullName>
        <label>店舗Seq#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumSrvPriceExcTax__c</fullName>
        <label>サービス料（税抜）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumSrvPriceIncTax__c</fullName>
        <label>サービス料（税込）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumTax__c</fullName>
        <description>消費税合計値
[合計金額（税込）/1.05]</description>
        <label>消費税</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TableNo__c</fullName>
        <inlineHelpText>レストランでの実際のテーブル＃</inlineHelpText>
        <label>TableNo</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <formula>if ( OutSideAccount__c = 1, 
IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;A&quot;, &quot;対象&quot;), 
IF(Field39__c = &quot;30&quot;, IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;VOID&quot;, &quot;VOID対象&quot;), 
&quot;&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TeaTimeFlag__c</fullName>
        <formula>if ( Field155__c &gt;= 2450, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>客単価 &gt;= ¥3,150のとき、レストランにて食事&amp;ドリンク(TeaTimeFlag = 0)、以外はレストランにて喫茶となる</inlineHelpText>
        <label>TeaTimeFlag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomCode__c</fullName>
        <label>部屋タイプコード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomName__c</fullName>
        <label>部屋タイプ名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomSeq__c</fullName>
        <label>部屋タイプSeq#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKb__c</fullName>
        <defaultValue>TEXT($Setup.CommDefine__c.UnitPriceDefKb__c)</defaultValue>
        <description>会計新規作成場合、共通定義の「会計商品単価定義区分」設定値から項目にコピーする</description>
        <label>会計商品単価定義区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comment__c</fullName>
        <inlineHelpText>40文字まで入力可能です
B5 会計書: 12桁ごとにリターンキーを入力してください。
A4 会計書: 16桁ごとにリターンキーを入力してください。</inlineHelpText>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>frs__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>会計</relationshipLabel>
        <relationshipName>AccountYLM3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>relaccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お客様</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>会計</relationshipLabel>
        <relationshipName>accountjvxI</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>会計</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field145__c</columns>
        <columns>frs__c</columns>
        <columns>Field147__c</columns>
        <columns>Field151__c</columns>
        <columns>ContactName__c</columns>
        <columns>Relreserve__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Account#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>